Được tạo bằng Colaboratory

--- a/Bt_huong_dan_gia_dinh_ANOVA2_0505.ipynb
+++ b/Bt_huong_dan_gia_dinh_ANOVA2_0505.ipynb
@@ -75,10 +75,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "CBqbYDVmPPcL",
-        "outputId": "6d1339ab-9c6b-4f57-faed-702109569db7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6d1339ab-9c6b-4f57-faed-702109569db7"
       },
       "source": [
         "#Bước 1: Hãy tạo một tập dữ liệu mẫu sample_1 với kích thước 100 tuân theo phân phối chuẩn\n",
@@ -101,10 +101,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "jkRkup-iPPcM",
-        "outputId": "c17d175a-9e2f-4f46-ea4a-25eb98a2a976",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c17d175a-9e2f-4f46-ea4a-25eb98a2a976"
       },
       "source": [
         "#Bước 2: hãy tạo tập dữ liệu mẫu sample_2 với kích thước 100 tuân theo phân phối Poisson\n",
@@ -264,12 +264,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "33by_r6dqILm",
-        "outputId": "f38c461a-0b8c-4a2a-e9e4-754f01aaa9ba",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
-        }
+        },
+        "id": "33by_r6dqILm",
+        "outputId": "f38c461a-0b8c-4a2a-e9e4-754f01aaa9ba"
       },
       "source": [
         "df.head()"
@@ -378,11 +378,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RlD2i3ntqw6-",
-        "outputId": "75008e6e-2976-4ab6-c548-54b9a34700a9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "RlD2i3ntqw6-",
+        "outputId": "75008e6e-2976-4ab6-c548-54b9a34700a9"
       },
       "source": [
         "#Kiểm định bằng bartlett\n",
@@ -425,7 +425,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b65d67e2-1503-4c9d-ead4-5b3b14608d49"
+        "outputId": "a6d5e8cc-6eb9-44ff-9150-93ef0393be4a"
       },
       "source": [
         "#Kiểm định bằng Levene\n",
@@ -438,13 +438,13 @@
         "  print(\"Có bằng chứng thống kê để bác bỏ H0, Điều này ngụ ý rằng Tồn tại ít nhất một cặp mẫu có phương sai khác nhau\")\n",
         "  #Xem phương sai của từng biến\n",
         "  b, e, m, p = [np.var(x, ddof=1) for x in [Bus, Eng, Math, Psy]]\n",
-        "  print(\"PS của Bus =\", b, \"\\n\",\n",
-        "      \"PS của Eng =\", e, \"\\n\",\n",
-        "      \"PS của Math =\", m, \"\\n\",\n",
-        "      \"PS của Psy =\", p, \"\\n\",)\n",
+        "  print(\"Phương Sai của Bus =\", b, \"\\n\",\n",
+        "      \"Phương Sai của Eng =\", e, \"\\n\",\n",
+        "      \"Phương Sai của Math =\", m, \"\\n\",\n",
+        "      \"Phương Sai của Psy =\", p, \"\\n\",)\n",
         "     "
       ],
-      "execution_count": 26,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -452,10 +452,10 @@
             "Statistic = 11.951701689664675 \n",
             " p value = 5.393497898754758e-07\n",
             "Có bằng chứng thống kê để bác bỏ H0, Điều này ngụ ý rằng Tồn tại ít nhất một cặp mẫu có phương sai khác nhau\n",
-            "PS của Bus = 0.008056440248520777 \n",
-            " PS của Eng = 0.06931919525239623 \n",
-            " PS của Math = 0.019342220310734383 \n",
-            " PS của Psy = 0.008853287626957689 \n",
+            "Phương Sai của Bus = 0.008056440248520777 \n",
+            " Phương Sai của Eng = 0.06931919525239623 \n",
+            " Phương Sai của Math = 0.019342220310734383 \n",
+            " Phương Sai của Psy = 0.008853287626957689 \n",
             "\n"
           ],
           "name": "stdout"
