Được tạo bằng Colaboratory

--- a/Bt_huong_dan_du_lieu_ANOVA.ipynb
+++ b/Bt_huong_dan_du_lieu_ANOVA.ipynb
@@ -66,7 +66,7 @@
         "import numpy as np\n",
         "import pandas as pd"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -81,24 +81,24 @@
         "social_use = np.random.choice(social_levels, 100, p = [0.2, 0.5, 0.3])\n",
         "hours = np.random.choice(8, 100)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "TUmlmMpqcNNA",
-        "outputId": "c92d2195-afd9-430b-ecab-6f562766413a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
-        }
+        },
+        "outputId": "c92d2195-afd9-430b-ecab-6f562766413a"
       },
       "source": [
         "df = pd.DataFrame({'Social Use': social_use, 'Hour Use': hours})\n",
         "df.head()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -176,15 +176,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "2QhOoAZDcNNB",
-        "outputId": "7e3a6ff1-02da-4f70-8f4f-d3636099be8d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7e3a6ff1-02da-4f70-8f4f-d3636099be8d"
       },
       "source": [
         "hours"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -208,17 +208,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "3PuGz94AqisM",
-        "outputId": "8dca48ff-4b4e-45f0-83e8-b2f4dbfb5e79",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 402
-        }
+        },
+        "outputId": "8dca48ff-4b4e-45f0-83e8-b2f4dbfb5e79"
       },
       "source": [
         "df = pd.DataFrame({'Social Use': social_use, 'Hour Use': hours})\n",
         "df"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -369,24 +369,24 @@
         "        else:\n",
         "            hours_new.append(np.random.randint(3,8))"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "ikcQsCEFsa8n",
-        "outputId": "d67517ee-ed2c-4ac8-92c1-6c41ae16e07d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 343
-        }
+        },
+        "outputId": "d67517ee-ed2c-4ac8-92c1-6c41ae16e07d"
       },
       "source": [
         "df_new = pd.DataFrame({'Social Use': social_use_new, 'Hour Use': hours_new})\n",
         "df_new.head(10)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -531,24 +531,24 @@
         "dac_diem_sinh_vien = np.random.choice(sv, 100, p = [0.25, 0.25, 0.25, 0.25])\n",
         "diem_trung_binh = np.random.choice(6, 100)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "HIJKOdKmsj-3",
-        "outputId": "62d675fb-8c39-4306-b822-7ada25921272",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 343
-        }
+        },
+        "outputId": "62d675fb-8c39-4306-b822-7ada25921272"
       },
       "source": [
         "df_sv = pd.DataFrame({'Sinh vien': dac_diem_sinh_vien, 'TB': diem_trung_binh})\n",
         "df_sv.head(10)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -667,7 +667,7 @@
         "id": "ZEWbaXP1cNNC"
       },
       "source": [
-        "Phát biểu của bạn ở đây: H0:μ1=μ2=μ3=μ4 với\n",
+        "Phát biểu của bạn ở đây: \n",
         " + μ1 : điểm trung bình của sinh viên năm 1\n",
         " + μ2 : điểm trung bình của sinh viên năm 2\n",
         " + μ3 : điểm trung bình của sinh viên năm 3\n",
@@ -675,9 +675,14 @@
         "\n",
         "Ha: Tồn tại ít nhất một cặp (μi,μj) có giá trị khác nhau...\n",
         "\n",
-        "...\n",
+        " + mean = 0,5\n",
+        " + alpha = 0.05\n",
+        " + size mỗi mẫu = 50\n",
         "\n",
-        "\n",
+        "Xây dựng giả thuyết:\n",
+        "$$H_{0}: \\mu_{1} = \\mu_{2} = \\mu_{3} = \\mu_{4}$$\n",
+        "Giả thuyết thay thế:\n",
+        "$$H_{a}: \\mu_{1} \\neq \\mu_{2}(\\neq \\mu_{3},\\mu_{4})$$\n",
         "---\n",
         "\n",
         "\n",
@@ -732,24 +737,24 @@
         "sinh_vien_nganh = np.random.choice(major, 140, p = [0.25, 0.25, 0.25, 0.25])\n",
         "diem_trung_binh_bt = np.random.choice(6, 140)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "fozI-CfNtQ9Q",
-        "outputId": "75f54182-1e08-459a-a037-ff0447ebf094",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 166
-        }
+        },
+        "outputId": "75f54182-1e08-459a-a037-ff0447ebf094"
       },
       "source": [
         "df_sv = pd.DataFrame({'Sinh vien': sinh_vien_nganh, 'TB': diem_trung_binh_bt})\n",
         "df_sv.head(4)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
